--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@react-three/drei": "^9.56.11",
+    "@react-three/fiber": "^8.13.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-force-graph": "^1.47.7",
+    "react-force-graph-3d": "^1.27.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "three": "^0.150.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
